# swe-bench-dockerfiles

./: .gitignore  README.md  pyproject.toml
src/dockerfiles/: astropy__astropy-12907.Dockerfile  astropy__astropy-13033.Dockerfile  astropy__astropy-13236.Dockerfile  astropy__astropy-13398.Dockerfile  astropy__astropy-13453.Dockerfile  astropy__astropy-13579.Dockerfile  astropy__astropy-13977.Dockerfile  astropy__astropy-14096.Dockerfile  astropy__astropy-14182.Dockerfile  astropy__astropy-14309.Dockerfile  astropy__astropy-14365.Dockerfile  astropy__astropy-14369.Dockerfile  astropy__astropy-14508.Dockerfile  astropy__astropy-14539.Dockerfile  astropy__astropy-14598.Dockerfile  astropy__astropy-14995.Dockerfile  astropy__astropy-7166.Dockerfile  astropy__astropy-7336.Dockerfile  astropy__astropy-7606.Dockerfile  astropy__astropy-7671.Dockerfile  astropy__astropy-8707.Dockerfile  astropy__astropy-8872.Dockerfile  django__django-10097.Dockerfile  django__django-10554.Dockerfile  django__django-10880.Dockerfile  django__django-10914.Dockerfile  django__django-10973.Dockerfile  django__django-10999.Dockerfile  django__django-11066.Dockerfile  django__django-11087.Dockerfile  django__django-11095.Dockerfile  django__django-11099.Dockerfile  django__django-11119.Dockerfile  django__django-11133.Dockerfile  django__django-11138.Dockerfile  django__django-11141.Dockerfile  django__django-11149.Dockerfile  django__django-11163.Dockerfile  django__django-11179.Dockerfile  django__django-11206.Dockerfile  (+459 more)
src/sb_dockerfile_gen/: __init__.py  constants.py  utils.py
(+15 files in other folders)
