[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sb-dockerfile-gen-og"
version = "0.1.0"
description = "Dockerfile generator for SWE-bench (original Python benchmarks)"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "unidiff",
]

[project.scripts]
sb-dockerfile-gen-og = "sb_dockerfile_gen:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sb_dockerfile_gen.data" = ["environments/**/*.yml"]
